--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -4,51 +4,25 @@ description: "meta description of the page"
 ---
 
 
-# Get Started
+<img style="margin: 0 auto;" src="https://i.ibb.co/Yt6VsT4/docsit.png" alt="Docusaurus">
+<p align="center" style="margin-top: 1rem;">
+  <a href="https://app.netlify.com/start/deploy?repository=https://github.com/devmuhnnad/docsit"><img src="https://www.netlify.com/img/deploy/button.svg" alt="Deploy to Netlify"></a>
+</p>
+</br>
+Building a documentation website has never been easier!
 
-Let's discover **Flutter Bond in less than 5 minutes**.
+## What is DocsIt?
 
-Get started by **creating a new Flutter bond project**.
+DocsIt is a tool or a template built on NuxtJS that helps you build a documentation website for your project. It is designed to be simple and easy to use. You can use it to build your own documentation website in minutes.
 
-### What you'll need
+## Installation
 
-- [Flutter](https://flutter.dev/docs/get-started/install) - Flutter SDK
-
-## Start a new project
-
-Create a new Flutter bond project by forking the [Flutter Bond Starter](https://github.com/onestudio-co/flutter-bond) repository.
-By running the following command in your terminal:
-
-```bash
-git clone https://github.com/onestudio-co/flutter-bond.git
-```
-
-Then navigate to the newly created directory:
+Use clone command to get the template
 
 ```bash
-cd flutter-bond
+git clone https://github.com/devmuhnnad/docsit.git
 ```
 
-## Install dependencies
+## Contributing
 
-Install the dependencies by running the following command in your terminal:
-
-```bash
-pub get
-```
-
-The command also installs all necessary dependencies you need to run your project.
-
-## Start your project
-
-Run the following command in your terminal:
-
-```bash
-flutter run
-```
-
-This command starts your project in the debug mode.
-
-You will see a simple screen.
-
-Congratulations! You have successfully created your first Flutter Bond project.
+We've released DocsIt because it helps and encourages building informative Documentation for open-source projects, We hope that other organizations can benefit from the project. We are thankful for any contributions from the community.
