--- a/docs/2.customize_it.md
+++ b/docs/2.customize_it.md
@@ -1,3 +1,13 @@
+---
+title: "Customize it"
+description: "Customize DocsIt to fit your needs"
+---
+
+# Customize it
+
+DocsIt is built on top of NuxtJs, so you can customize it the way you want. addtionally, DocsIt offers file "docsit.config.js" that you can use to customize the template without touching the code.
+
+```js
 /* 
   This is the configuration file for DocsIt.
 */
@@ -39,3 +49,10 @@ const config = {
 };
 
 export default config;
+
+
+```
+
+## Theme
+
+DocsIt uses [TailwindCSS](https://tailwindcss.com/) as a CSS framework, so you can customize the theme by editing the file "tailwind.config.js" and adding your own colors, fonts, etc.
